public/assets/css/header.css
/* CSS used here will be applied after bootstrap.css */
body {
    margin-top: 70px;
}

.top-navbar {
    min-height: 65px;
    color: #000;
    background: #FFF;
    border-bottom: 1px solid #e3e3e3;
    z-index: 10;
}

.top-navbar .navbar-toggle .icon-bar {
    background-color: #000;
}

a.dropdown-toggle {
    color: #000;
}

.lakari-logo {
    margin-top: -10px;
    width: 90px;
}

.button-navbar-button {
    background: #b52a2f;
}

.navbar-link {
    font-family: "Champagne-Limousines-Bold", sans-serif;
    color: #000;
}

.navbar-link {
    color: #000;
    font-size: 20px;
    font-weight: 100;
}

.nav>li>a:hover, .nav>li>a:focus {
    background: white;
}

.navbar-collapse {
    width: auto;
    background: white;
    height: auto;
    max-height: 400px;
    text-align: center;
    overflow-x: hidden;
}

.carousel-indicators {
    display: none;
}

.navbar-search {
    max-width: 80%;
    margin: 0 auto;
}

.navbar-toggle {
    border: none;
    background: transparent !important;
}

.navbar-toggle &:hover {
    background: transparent !important;
}

.navbar-toggle .icon-bar {
    width: 22px;
    transition: all 0.2s;
}
.navbar-toggle .top-bar-icon {
    transform: rotate(45deg);
    transform-origin: 10% 10%;
}
.navbar-toggle .middle-bar {
    opacity: 0;
}

.navbar-toggle .bottom-bar {
    transform: rotate(-45deg);
    transform-origin: 10% 90%;
}

.navbar-toggle.collapsed .top-bar-icon {
    transform: rotate(0);
}

.navbar-toggle.collapsed .middle-bar {
    opacity: 1;
}

.navbar-toggle.collapsed .bottom-bar {
    transform: rotate(0);
}

/* Shopping Cart */ 
#main-nav, #cd-cart {
    position: fixed;
    height: 100%;
    width: 260px;
    /* header height */
    padding-top: 25px;
    overflow-y: auto;
    -webkit-overflow-scrolling: touch;
    box-shadow: 0 0 20px rgba(0, 0, 0, 0.2);
    z-index: 3;
}

#cd-cart {
    right: -100%;
    top: 50px;
    background: #FFF;
    -webkit-transition: right 0.3s;
    -moz-transition: right 0.3s;
    transition: right 0.3s;
}

#cd-cart.speed-in {
    right: 0;
}

#cd-cart > * {
    padding: 0 1em;
}
#cd-cart h2 {
    font-size: 14px;
    font-size: 0.875rem;
    font-weight: bold;
    text-transform: uppercase;
    margin: 1em 0;
}
#cd-cart .cd-cart-items {
    padding: 0;
}
#cd-cart .cd-cart-items li {
    position: relative;
    padding: 1em;
    border-top: 1px solid #e0e6ef;
}
#cd-cart .cd-cart-items li:last-child {
    border-bottom: 1px solid #e0e6ef;
}
#cd-cart .cd-qty, #cd-cart .cd-price {
    color: #a5aebc;
}
#cd-cart .cd-price {
    margin-top: .4em;
}
#cd-cart .cd-item-remove {
    position: absolute;
    right: 1em;
    top: 50%;
    bottom: auto;
    -webkit-transform: translateY(-50%);
    -moz-transform: translateY(-50%);
    -ms-transform: translateY(-50%);
    -o-transform: translateY(-50%);
    transform: translateY(-50%);
    width: 32px;
    height: 32px;
    border-radius: 50%;
    background: url("../images/cd-remove-item.svg") no-repeat center center;
}
#cd-cart .cd-item-remove:hover {
    background-color: #e0e6ef;
}

.cd-img-replace {
  /* replace text with a background-image */
  display: inline-block;
  overflow: hidden;
  text-indent: 100%;
  white-space: nowrap;
}

#cd-cart .cd-cart-total {
    padding-top: 1em;
    padding-bottom: 1em;
}
#cd-cart .cd-cart-total span {
    float: right;
}
#cd-cart .cd-cart-total::after {
    /* clearfix */
    content: '';
    display: table;
    clear: both;
}
#cd-cart .checkout-btn {
    display: block;
    width: 100%;
    height: 60px;
    line-height: 60px;
    background: #7dcf85;
    color: #FFF;
    text-align: center;
}
.no-touch #cd-cart .checkout-btn:hover {
    background: #a2dda8;
}
#cd-cart .cd-go-to-cart {
    text-align: center;
    margin: 1em 0;
}
#cd-cart .cd-go-to-cart a {
    text-decoration: underline;
}

#cd-shadow-layer {
    position: fixed;
    min-height: 100%;
    width: 100%;
    top: 0;
    left: 0;
    background: rgba(67, 87, 121, 0.6);
    cursor: pointer;
    z-index: 2;
    display: none;
}

#cd-shadow-layer.is-visible {
    display: block;
    -webkit-animation: cd-fade-in 0.3s;
    -moz-animation: cd-fade-in 0.3s;
    animation: cd-fade-in 0.3s;
}

@media only screen and (min-width: 768px) {

    body {
        margin-top: 110px;
    }

    .navbar-fixed-top {
        height: 100px; /* Whatever you want. */
    }

    .lakari-logo {
        margin-top: -40px;
        width: 180px;
    }

    .navbar {
        padding: 30px;
        transition: background 1s, border 1s;
        margin-bottom: 0;
        border-radius: 0;
    }

    .navbar-collapse {
        width: 100%;
    }

    .navbar-search {
        width: 100%;
        transform: translateY(25%);
    }

    #cd-cart > * {
        padding: 0 2em;
    }
    #cd-cart .cd-cart-items li {
        padding: 1em 2em;
    }
    #cd-cart .cd-item-remove {
        right: 2em;
    }

    #main-nav, #cd-cart {
        width: 350px;
        height: 100%;
    }

    #cd-cart.speed-in {
        top: 100px;
    }

    .carousel-indicators {
        display: block;
    }
}

